syntax = "proto3";

import "global.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

/** 内容服务 */
service ContentService {
    // 获取页面
    rpc GetPage (IdOrName) returns (SPage) {
    }
    // 保存页面
    rpc SavePage (SPage) returns (TxResult) {
    }
    // 删除页面
    rpc DeletePage (Int64) returns (TxResult) {
    }

    // 获取所有栏目
    rpc GetArticleCategories (Empty) returns (ArticleCategoriesResponse) {
    }
    // 获取文章栏目,可传入ID或者别名
    rpc GetArticleCategory (IdOrName) returns (SArticleCategory) {
    }
    // 保存文章栏目
    rpc SaveArticleCategory (SArticleCategory) returns (TxResult) {
    }
    // 删除文章分类
    rpc DeleteArticleCategory (Int64) returns (TxResult) {
    }
    // 获取文章
    rpc GetArticle (IdOrName) returns (SArticle) {
    }
    // 更新文章浏览次数
    rpc UpdateArticleViewsCount(ArticleViewsRequest) returns (TxResult){} 
    // 喜欢/不喜欢文章
    rpc LikeArticle(ArticleLikeRequest) returns (TxResult){} 
    // 删除文章
    rpc DeleteArticle (Int64) returns (TxResult) {
    }
    // 保存文章
    rpc SaveArticle (SArticle) returns (TxResult) {
    } 
}




//栏目
message SArticleCategory {
    //编号
    int64 id = 1;
    //父类编号,如为一级栏目则为0
    int64 parentId = 2;
    // 浏览权限
    int32 flag = 3;
    // 名称(唯一)
    string name = 4;
    // 别名
    string alias = 5;
    // 排序编号
    int32 sortNum = 6;
    // 定位路径（打开栏目页定位到的路径）
    string location = 7;
    // 页面标题
    string title = 8;
    // 关键字
    string keywords = 9;
    // 描述
    string description = 10;
}

/** 文章 */
message SArticle {
    /** 编号  */
    sint64 id = 1;
    /** 栏目编号 */
    sint64 categoryId = 2;
    /** 标题 */
    string title = 3;
    /** 标志 */
    sint32 flag = 4;
    /** 小标题 */
    string shortTitle = 5;
    /** 文章附图 */
    string thumbnail = 6;
    /** 商户编号 */
    sint32 mchId = 7;
    /** 发布人用户编号 */
    sint64 publisherId = 8;
    /** 重定向URL */
    string location = 9;
    /** 优先级,优先级越高，则置顶 */
    sint32 priority = 10;
    /** 浏览钥匙 */
    string accessKey = 11;
    /** 文档内容 */
    string content = 12;
    /** 标签（关键词） */
    string tags = 13;
    /** 显示次数 */
    sint32 viewCount = 14;
    /** 点赞次数 */
    sint32 likeCount = 15;
    /** 不喜欢次数 */
    sint32 dislikeCount = 16;
    /** 排序序号 */
    sint32 sortNum = 17;
    /** 创建时间 */
    sint64 createTime = 18;
    /** 最后修改时间 */
    sint64 updateTime = 19;
    // 扩展信息
    map<string,string> ext = 20;
}

message SPage {
    // 编号
    int64 id = 1;
    // 商户编号
    int64 userId =  2;
    // 标题
    string title = 3;
    // 字符标识
    string code = 4;
    // 浏览权限
    int32 flag = 5;
    // 浏览钥匙
    string accessKey = 6;
    // 关键词
    string keyWord = 7;
    // 描述
    string description = 8;
    // 样式表地址
    string cssPath = 9;
    // 内容
    string content = 10;
    // 修改时间
    int64 updateTime = 11;
    // 是否启用
    bool enabled = 12;
}

message ArticleCategoriesResponse {
    repeated SArticleCategory value =  1;
}

// 文章浏览数更新请求
message ArticleViewsRequest{
    // 文章编号
    uint64 id = 1;
    // 会员编号
    uint32 memberId = 2;
    // 次数
    uint32 count = 3;
}

// 文章点赞/不喜欢请求
message ArticleLikeRequest{
    // 文章编号
    uint64 id = 1;
    // 会员编号
    uint32 memberId = 2;
    // 是否不喜欢
    bool isDislike = 3;
}